# GRAIL

./: .ckignore  .gitignore  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  streamlit_app.py  uspto_processer_1.py  uspto_processer_2.py
GRAIL/: study.pkl
configs/: paper_filter_gcn.yaml  paper_filter_gin.yaml  paper_filter_graph_only.yaml  paper_filter_morgan_only.yaml  paper_filter_single.yaml  paper_full_ensemble.yaml  paper_full_ensemble_two_stage_filter.yaml  paper_generator_dot.yaml  paper_generator_mlp.yaml  paper_minimal_baseline.yaml  paper_no_pretrain.yaml
docs/: ARCHITECTURE.md  CONCEPTUAL_REVIEW_RU.md  DATASETS.md  EXPERIMENTS.md  FINDINGS.md  GRAIL_FRAMING.md  NOTEBOOKS.md  PROJECT_LAYOUT.md  PUBLICATION_GUIDE.md  REPRODUCIBILITY.md  STATUS.md  WORKFLOWS.md
grail_metabolism/: __init__.py  ablation_plan.py  artifacts.py  cli.py  compressed_rules.smarts  config.py  metrics.py  stats.py
notebooks/: Unit_Tests.ipynb  filter_experiments.ipynb  filter_train.ipynb  generator_tuning.ipynb  mappings.ipynb  parameter_tuning.ipynb  pca_bonds.pkl  pca_bonds_single.pkl  pretrain_v1.ipynb  reduce_reactions.ipynb  uspto_process.ipynb
results/: ablation_local_verdict.json  abstention_frontier.json  anchor_certification.json  benchmark_report.json  benchmark_report_depth2.json  benchmark_report_gap.json  budget_matched_frontier.json  budget_matched_leaderboard.json  ceiling_external_validity.json  citations_verified.json  coverage_gap_types.json  cross_method_decomposition.json  factorized_eval.json  factorized_val.json  filter_compare_matched_sub800.json  gflownet_seed0_overnight.json  gflownet_seed1_overnight.json  gflownet_seed2_overnight.json  gloryx_oracle.json  hybrid_rerank.json  hybrid_rerank_full1170.json  joint_rerank.json  leakage_fix_report.json  match_sensitivity.json  match_sensitivity_3method.json  match_sensitivity_4method.json  match_sensitivity_5method.json  metapredictor_1170.json  multiseed_headline.json  multiseed_micro.json  prior_vs_learned.json  rank_flip_ci.json  recall_factorization.json  redesign_gate_a.json  redesign_gate_c.json  selection_ablation.json  selection_ablation_prior300.json  selection_ablation_ranksignal.json  sygma_robust.json  xdomain_retro_protocol.json
scripts/: _cli_wrapper.py  abstention_frontier.py  aggregate_seeds.py  anchor_certification.py  audit_leakage.py  bt_predict.py  budget_matched_frontier.py  budget_matched_leaderboard.py  build_joint_pools.py  build_release.sh  build_tier2_1170_input.py  build_type_vocab.py  ceiling_external_validity.py  census_multistep.py  compare_filters.py  coverage_gap_types.py  cross_method_decomposition.py  crutch.py  diagnose_gloryx_oracle.py  diagnose_rank_decomp.py  diagnose_ranker.py  diagnose_rerank_ceiling.py  eval_factorized.py  eval_hybrid_rerank.py  eval_joint_rerank.py  eval_on_gloryx.py  export_presets.py  factorize_recall.py  finish_ablation_local.py  fix_splits.py  leak_impact.py  make_diagnostic_figures.py  make_factorization_figure.py  (+49 more)
(+142 files in other folders)
