[tool.poetry]
name = "grail_metabolism"
version = "0.1.4"
description = "Graph neural networks and Rule-based Approach In drug metaboLism prediction"
authors = ["doctawho42 <plomoshnovnikita00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
rdkit = "^2024.3.5"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
torch = "^2.4.1"
torch-geometric = "^2.6.1"
multipledispatch = "^1.0.0"
streamlit = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
