[tool.poetry]
name = "grail_metabolism"
version = "0.2.0"
description = "Graph neural networks and rule-based drug metabolism prediction"
authors = ["Nikita Plomoshnov <plomoshnovnikita00@gmail.com>"]
readme = "README.md"
keywords = ["chemoinformatics", "drug-metabolism", "gnn", "rdkit", "smirks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "grail_metabolism" }]
include = ["grail_metabolism/resources/*.txt"]
exclude = [
  ".DS_Store",
  "AUDIT_REPORT.md",
  "RESULTS.md",
  "artifacts/**",
  "dist/**",
  "docs/**",
  "gens.smi",
  "grail_metabolism/data/**",
  "grail_metabolism/*.csv.gz",
  "grail_metabolism/*.html",
  "grail_metabolism/*.hdf5",
  "grail_metabolism/*.onnx",
  "grail_metabolism/*.pth",
  "grail_metabolism/*.smarts",
  "grail_metabolism/.DS_Store",
  "grail_metabolism/lib/**",
  "grail_metabolism/network.html",
  "grail_metabolism/single_molecule_network.html",
  "grail_metabolism/venv/**",
  "img/**",
  "notebooks/**",
  "prod.pkl",
  "results/**",
  "sub.pkl",
  "timeout.log",
  "xtr.txt",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24,<2.0"
pandas = "^2.2.3"
rdkit = "^2025.9.1"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
torch = "^2.4.1"
torch-geometric = "^2.6.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
multipledispatch = "^1.0.0"
pyvis = "^0.3.2"
pillow = "^11.1.0"
pyyaml = "^6.0.2"
streamlit = { version = "^1.45.1", optional = true }
optuna = { version = "^4.3.0", optional = true }

[tool.poetry.extras]
app = ["streamlit"]
tuning = ["optuna"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
build = "^1.2.2"
twine = "^6.1.0"

[tool.poetry.scripts]
grail = "grail_metabolism.cli:main"

[tool.pytest.ini_options]
testpaths = ["grail_metabolism/tests"]
norecursedirs = [
  ".git",
  ".idea",
  ".ipynb_checkpoints",
  "dist",
  "grail_metabolism/data",
  "grail_metabolism/lib",
  "grail_metabolism/venv",
  "notebooks",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
